--- a/symphonia-format-mkv/Cargo.toml
+++ b/symphonia-format-mkv/Cargo.toml
@@ -3,6 +3,7 @@ name = "symphonia-format-mkv"
 version = "0.0.1"
 description = "Pure Rust MKV/WebM demuxer (a part of project Symphonia)."
 homepage = "https://github.com/pdeljanov/Symphonia"
+include = ["src/**/*.rs", "Cargo.toml"]
 repository = "https://github.com/pdeljanov/Symphonia"
 authors = ["Philip Deljanov <philip.deljanov@gmail.com>"]
 license = "MPL-2.0"
@@ -13,5 +14,6 @@ edition = "2018"
 
 [dependencies]
 log = "0.4"
+num-bigint = "0.4"
 symphonia-core = { version = "0.2", path = "../symphonia-core" }
 symphonia-metadata = { version = "0.2", path = "../symphonia-metadata" }
